syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

message Label {
    string key = 1;
    string value = 2;
}

message Meta {
    string name = 1;
    string description = 2;
    google.protobuf.Timestamp created = 3;
    string created_by = 4;
    google.protobuf.Timestamp last_modified = 5;
    string last_modified_by = 6;
    repeated Label label = 7;
}

message Entity {
    string id = 1;
    Meta meta = 2;
}

message Job {
    string id = 1;
    Meta meta = 2;
    string cron_expression = 3;
    google.protobuf.Timestamp valid_from = 4;
    google.protobuf.Timestamp valid_to = 5;
    bool disabled = 15;
}

message Seed {
    string id = 1;
    Meta meta = 2;
    string entity_id = 3;
    repeated string job_id = 4;
    bool disabled = 15;
}

message Parameter {
    string id = 1; // seed id
    string query = 3;
    string max_id = 4;
    string since_id = 5;
    string geocode = 6;
    string lang = 7;
    string result_type = 8;
    int32 count = 9;
    string until = 10;
    bool include_entities = 11;
    string tweet_mode = 12;
    string locale = 13;
}

message QueuedSeed {
    string id = 1;
    int32 seq = 2;
    string ref = 3;
    string seed_id = 4;
    Parameter parameter = 5;
}

message RateLimit {
    int32 limit = 1;
    int32 remaining = 2;
    google.protobuf.Timestamp reset = 3;
}
